force-app/main/default/objects/sm_Inventory__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <description>Free form value that can be used to create and associate lot numbers to inventory</description>
    <label>Lot</label>
    <length>25</length>
    <type>Text</type>
</CustomField>