force-app/main/default/objects/sm_Inventory__c/fields/sm_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>sm_Date_Received__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>