force-app/main/default/objects/sm_Inventory__c/fields/sm_Store_Account__c.field-meta.xml
<CustomField>
    <fullName>sm_Store_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account that represents the Store this inventory is associated with..</description>
    <inlineHelpText>Select the Store this inventory is added for.</inlineHelpText>
    <label>Store Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>