force-app/main/default/objects/sm_Inventory__c/listViews/Inventory_List.listView-meta.xml
<ListView>
    <fullName>Inventory_List</fullName>
    <columns>NAME</columns>
    <columns>sm_Inventory_Item__c</columns>
    <columns>sm_Quantity__c</columns>
    <columns>sm_Store_Account__c</columns>
    <filterScope>Mine</filterScope>
    <label>Inventory List</label>
</ListView>